# plc-linux

./: .gitignore  CMakeLists.txt  README.md  build.sh
data/configs/: controllers.json  factory.json  plc.json  scenario.json
data/configs/boards/: fcplc-1v0.json  fcplc-1v1.json  fcplc-1v2.json  fcplc-2v0.json  fcplcm-1v1.json
data/system/: default  plc.service
inc/cam/: camera.h
inc/controllers/: controllers.h  meteo.h  security.h  socket.h  tank.h  therm.h  waterer.h
inc/core/: extenders.h  gpio.h  lcd.h  onewire.h
inc/db/: database.h  dbloader.h
inc/ftest/: ftest.h
inc/net/: notifier.h  server.h
inc/net/handlers/: securityh.h
inc/net/response/: response.h
inc/net/tgbot/: tgbot.h  tghandlers.h  tgmenu.h  tgresp.h
inc/net/tgbot/handlers/: tgcam.h  tgmain.h  tgmeteo.h  tgsecurity.h  tgsocket.h  tgtank.h  tgwaterer.h
inc/net/web/: response.h  webclient.h  webserver.h
inc/net/web/handlers/: indexh.h  meteoh.h  securityh.h  socketh.h  tankh.h  watererh.h
inc/plc/: menu.h  plc.h
inc/scenario/: scenario.h
inc/stack/: rpc.h  stack.h
inc/utils/: configs.h  log.h  utils.h
inc/utils/configs/: cfgmeteo.h  cfgsecurity.h  cfgsocket.h  cfgtank.h  cfgwaterer.h  configs.h
src/: main.c
src/cam/: camera.c
src/controllers/: controllers.c  meteo.c  security.c  socket.c  tank.c  therm.c  waterer.c
src/core/: extenders.c  gpio.c  lcd.c  onewire.c
src/db/: database.c  dbloader.c
src/ftest/: ftest.c
src/net/: notifier.c  server.c
src/net/handlers/: securityh.c
src/net/response/: response.c
src/net/tgbot/: tgbot.c  tghandlers.c  tgmenu.c  tgresp.c
src/net/tgbot/handlers/: tgcam.c  tgmain.c  tgmeteo.c  tgsecurity.c  tgsocket.c  tgtank.c  tgwaterer.c
src/net/web/: response.c  webclient.c  webserver.c
src/net/web/handlers/: indexh.c  meteoh.c  securityh.c  socketh.c  tankh.c  watererh.c
src/plc/: menu.c  plc.c
src/scenario/: scenario.c
src/stack/: rpc.c  stack.c
src/utils/: configs.c  log.c  utils.c
src/utils/configs/: cfgmeteo.c  cfgsecurity.c  cfgsocket.c  cfgtank.c  cfgwaterer.c  configs.c
